--- a/index.html
+++ b/index.html
@@ -5,20 +5,71 @@
         <title>Website of Iuliia Lazurkevych</title>
     </head>
     <body>
+<!--page1-->
         <header>
-            <h1>Iullia Lazurkevych</h1>
+            <h1>Iuliia Lazurkevych</h1>
         </header>
         <nav>
-            <a href="">Home</a>
-            <a href="">Resume</a>
-            <a href="">Interests</a>
-            <a href="">Contacts</a>
+            <a href="">Main</a>
+            <a href="">About</a>
+            <a href="">Skills</a>
+            <a href="">Contact</a>
         </nav>
         <section>
             <p>Welcome to my personal wesite.</p>
             <p>Let me wish you a warm welcome to my personal website.<br>
             Here you can find information about me and my interests.<br></p>
         </section>
-        <img src="">
+        <img src="" alt="">
+<!--page2-->
+        <img src="" alt="">
+        <section>
+            <header>
+                <h3>A few facts about myself</h3>
+            </header>
+            <article>
+                Hello, my name is Iuliia. I have a British shorthair straight cat named Asia,<br>
+                I like coffe, my favorite food is chocolate, my favourite sport is skiing. <br>
+                I am skiing for 20 years and I'm still having fun and as long as skiing is enjoyable, <br>
+                I'm going to continue to do it. If you're having fun, then everything else will come easy to you.<br>
+            </article>
+        </section>
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+<!--page 3-->
+        
+
+
+
+<!--page 4-->
+        <section>
+            <header>
+                <h3>Contact me</h3>
+                <p>Please feel free to reach out to me if you have any questions or comments.<br>
+                Also, you could always just send me a friendly hello.</p>
+            </header>
+        </section>
+        <section>
+            <form action="https://formspree.io/lazurkevich@yahoo.com" method="POST">
+                <p>I always like to know who I'm speaking with.</p><br>
+                <label for="firstname">First Name:</label><br>
+                <input type="text" name="firstname" id="firstname" required><br>
+                <label for="secondname">Second Name:</label><br>
+                <input type="text" name="secondname" id="secondname" required><br>
+                <label for="email">Email Address:</lebel><br>
+                <input type="email" name="email" id="email" required><br>
+                <label for="message">Your Message:</label><br>
+                <textarea name="message" placeholder="Send something awesome to my inbox." rows="8" cols="50" required></textarea><br>
+                <input type="submit" name="submit" value="Send">
+                <input type="reset" name="reset" value="Reset">
+            </form>
+        </section>
+        <footer>
+            <nav>
+                
+            </nav>
+        </footer>
     </body>
 </html>
