--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="">Contact</a>
         </nav>
         <section>
-            <p>Welcome to my personal wesite.</p>
+            <h2>Welcome to my personal wesite.</h2>
             <p>Let me wish you a warm welcome to my personal website.<br>
             Here you can find information about me and my interests.<br></p>
         </section>
@@ -24,15 +24,13 @@
 <!--page2-->
         <img src="" alt="">
         <section>
-            <header>
-                <h3>A few facts about myself</h3>
-            </header>
-            <article>
+            <h3>A few facts about myself</h3>
+            <p>
                 Hello, my name is Iuliia. I have a British shorthair straight cat named Asia,<br>
                 I like coffe, my favorite food is chocolate, my favourite sport is skiing. <br>
                 I am skiing for 20 years and I'm still having fun and as long as skiing is enjoyable, <br>
                 I'm going to continue to do it. If you're having fun, then everything else will come easy to you.<br>
-            </article>
+            </p>
         </section>
         <img src="" alt="">
         <img src="" alt="">
@@ -58,7 +56,7 @@
                 <input type="text" name="firstname" id="firstname" required><br>
                 <label for="secondname">Second Name:</label><br>
                 <input type="text" name="secondname" id="secondname" required><br>
-                <label for="email">Email Address:</lebel><br>
+                <label for="email">Email Address:</label><br>
                 <input type="email" name="email" id="email" required><br>
                 <label for="message">Your Message:</label><br>
                 <textarea name="message" placeholder="Send something awesome to my inbox." rows="8" cols="50" required></textarea><br>
