--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
 <!--page1-->
+<!--fixed-->
         <header>
             <h1>Iuliia Lazurkevych</h1>
         </header>
@@ -15,6 +16,7 @@
             <a href="">Skills</a>
             <a href="">Contact</a>
         </nav>
+<!--fixed-->
         <section>
             <h2>Welcome to my personal wesite.</h2>
             <p>Let me wish you a warm welcome to my personal website.<br>
@@ -26,7 +28,7 @@
         <section>
             <h3>A few facts about myself</h3>
             <p>
-                Hello, my name is Iuliia. I have a British shorthair straight cat named Asia,<br>
+                Hello, my name is Iuliia. I have a British shorthair straight cat named Asja,<br>
                 I like coffe, my favorite food is chocolate, my favourite sport is skiing. <br>
                 I am skiing for 20 years and I'm still having fun and as long as skiing is enjoyable, <br>
                 I'm going to continue to do it. If you're having fun, then everything else will come easy to you.<br>
@@ -37,10 +39,16 @@
         <img src="" alt="">
         <img src="" alt="">
 <!--page 3-->
-        
-
-
-
+        <section>
+            <h3>Personal Skills</h3>
+            
+            <h3>Education</h3>
+            <ul>
+                <li><time>September-October 2016</time> – SoftServe IT Academy HTML5/ CSS3/ JavaScript Fundamentals course</li>
+                <li><time>2012 – 2013</time> – National University «Lviv Polytechnic», Accountingand Audit, Master’s degree</li>
+                <li><time>2008 – 2012</time> – National Forestry University of Ukraine, Accounting and Audit, Bachelor’s degree</li>
+            </ul>
+        </section>
 <!--page 4-->
         <section>
             <header>
