--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             
             <h3>Education</h3>
             <ul>
-                <li><time>September-October 2016</time> – SoftServe IT Academy HTML5/ CSS3/ JavaScript Fundamentals course</li>
-                <li><time>2012 – 2013</time> – National University «Lviv Polytechnic», Accountingand Audit, Master’s degree</li>
-                <li><time>2008 – 2012</time> – National Forestry University of Ukraine, Accounting and Audit, Bachelor’s degree</li>
+                <li>September-October 2016 – SoftServe IT Academy HTML5/ CSS3/ JavaScript Fundamentals course</li>
+                <li>2012 – 2013 – National University «Lviv Polytechnic», Accountingand Audit, Master’s degree</li>
+                <li>2008 – 2012 – National Forestry University of Ukraine, Accounting and Audit, Bachelor’s degree</li>
             </ul>
         </section>
 <!--page 4-->
