--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
         </section>
 <!--page 4-->
         <section>
-            <header>
                 <h3>Contact me</h3>
                 <p>Please feel free to reach out to me if you have any questions or comments.<br>
                 Also, you could always just send me a friendly hello.</p>
-            </header>
         </section>
         <section>
             <form action="https://formspree.io/lazurkevich@yahoo.com" method="POST">
@@ -66,7 +64,7 @@
                 <input type="text" name="secondname" id="secondname" required><br>
                 <label for="email">Email Address:</label><br>
                 <input type="email" name="email" id="email" required><br>
-                <label for="message">Your Message:</label><br>
+                <p>Your Message:</p><br>
                 <textarea name="message" placeholder="Send something awesome to my inbox." rows="8" cols="50" required></textarea><br>
                 <input type="submit" name="submit" value="Send">
                 <input type="reset" name="reset" value="Reset">
