--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <input type="text" name="secondname" id="secondname" required><br>
                 <label for="email">Email Address:</label><br>
                 <input type="email" name="email" id="email" required><br>
-                <p>Your Message:</p><br>
+                <label for="message">Your Message:</label><br>
                 <textarea name="message" placeholder="Send something awesome to my inbox." rows="8" cols="50" required></textarea><br>
                 <input type="submit" name="submit" value="Send">
                 <input type="reset" name="reset" value="Reset">
