--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 Here you can find information about me and my interests<br></p>
             </section>
         </div>
+        <video playsinline autoplay muted loop poster="keyboard-690066_960_720.jpg.jpg" id="bgvid">
+    <source src="Particle - 5252(1).mp4" type="video/mp4">
+</video>
 <!--page2-->
         <img src="" alt="">
         <section>
