--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styleflex.css">
+        <link rel="stylesheet" href="index.css">
         <title>Website of Iuliia Lazurkevych</title>
     </head>
     <body>
@@ -22,7 +22,19 @@
                 <p>Let me wish you a warm welcome to my personal website<br>
                 Here you can find information about me and my interests<br></p>
             </section>
+        </div><!---->
+        <div class="homepage-hero-module">
+    <div class="video-container">
+        <div class="filter"></div>
+        <video autoplay loop class="fillWidth">
+            <source src="Noted.mp4" type="video/mp4" />
+            <source src="Noted.mp4" type="video/webm" />
+        </video>
+        <div class="poster hidden">
+            <img src="Noted.mp4" alt="">
         </div>
+    </div>
+</div><!---->
  <!--page2-->
         <div class="clear"></div>
         <section class="aboutmyself">
@@ -95,5 +107,7 @@
             </nav>
             <a href="" id="copyright">&copy; Iullia Lazurkevych 2016</a>
         </footer>
+        <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="index.js"></script>
     </body>
 </html>
