--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" media="(max-width:320px)" href="indexmin.css">
+        <link rel="stylesheet" media="(min-width:620px)"href="index.css">
+        <link rel="stylesheet" media="(max-width:621px)" href="indexmin.css">
         <title>Website of Iuliia Lazurkevych</title>
     </head>
     <body>
