--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
-        <link rel="stylesheet" media="(min-width:620px)"href="index.css">
-        <link rel="stylesheet" media="(max-width:621px)" href="indexmin.css">
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" media="(min-width:621px)" href="index.css">
+        <link rel="stylesheet" media="(max-width:620px)" href="index-sm.css">
         <title>Website of Iuliia Lazurkevych</title>
     </head>
     <body>
@@ -71,7 +72,7 @@
                 Also, you could always just send me a friendly hello.</p>
         </section>
         <section class="contactform">
-            <h4>I always like to know who I'm speaking with.</h4><br>
+            <h3>I always like to know who I'm speaking with.</h3><br>
             <form>
                 <label for="firstname">First Name:</label><br>
                 <input type="text" name="firstname" id="firstname" required><br>
