--- a/index.html
+++ b/index.html
@@ -1,88 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet"> 
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" media="(max-width:800px)" href="indexmin.css">
-        <title>Website of Iuliia Lazurkevych</title>
-    </head>
-    <body>
-        <div class=firstpage id="main">
-            <div class="menu">
-                <nav class="navmenu">
-                    <a href="#main">main</a>
-                    <a href="#about">about</a>
-                    <a href="#skills">skills</a>
-                    <div id="contactbutton"><a href="#contact">contact</a></div>
-                </nav>
-            </div>
-            <header>
-                <h1 id="name">Iuliia Lazurkevych</h1>
-            </header>
-            <section class="welcometext">
-                <h2>Welcome to my personal website</h2>
-                <p>Let me wish you a warm welcome to my personal website<br>
-                Here you can find information about me and my interests<br></p>
-            </section>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" media="(max-width:800px)" href="indexmin.css">
+    <title>Website of Iuliia Lazurkevych</title>
+</head>
+<body>
+    <div class=firstpage id="main">
+        <div class="menu">
+            <nav class="navmenu">
+                <a href="#main">main</a>
+                <a href="#about">about</a>
+                <a href="#skills">skills</a>
+                <div id="contactbutton"><a href="#contact">contact</a></div>
+            </nav>
         </div>
-        <div class="clear" id="about"></div>
-        <section class="aboutmyself">
-            <h3 class="heading">A few facts about myself</h3>
-            <p>
-                Hello, my name is Iuliia. I have a British shorthair straight cat named Asja,<br>
-                I like frappe, my favorite food is chocolate, my favourite sport is skiing.<br>
-                I am skiing for 20 years. As long as skiing is enjoyable, I'm going to continue to do it.<br>
-                I am interested in front-end web development and having fun learning it.<br>
-                If you're having fun, then everything else will come easy to you.<br>
-            </p>
+        <header>
+            <h1 id="name">Iuliia Lazurkevych</h1>
+        </header>
+        <section class="welcometext">
+            <h2>Welcome to my personal website</h2>
+            <p>Let me wish you a warm welcome to my personal website<br> Here you can find information about me and my interests<br></p>
         </section>
-        <div class="clear"></div>
-            <div id=imageblock>
-            <img src="frappe.jpg" alt="Frappe" class="image">
-            <img src="skiing.jpg" alt="Skiing" class="image">
-            <img src="britishcat.jpg" alt="British cat" class="image">
-        </div>
-        <div class="clear" id="skills"></div>
-        <section class=skillsblock>
-            <h3 class="skillname">Skills</h3>
-            <ul class="skilldescription">
-                <li>HTML5;</li>
-                <li>CSS3;</li>
-                <li>JavaScript;</li>
-                <li>JQuery;</li>
-                <li>AJAX;</li>
-                <li>Bootstrap.</li>
-            </ul>
-            <h3 class="skillname">Education</h3>
-            <ul class="skilldescription">
-                <li><span>September-October 2016</span><br>SoftServe IT Academy HTML5/ CSS3/ JavaScript Fundamentals course;</li>
-                <li><span>2012 – 2013</span><br>National University «Lviv Polytechnic», Accounting and Audit, Master’s degree;</li>
-                <li><span>2008 – 2012</span><br>National Forestry University of Ukraine, Accounting and Audit, Bachelor’s degree;</li>
-            </ul>
-            <h3 class="skillname">Personal Skills</h3>
-            <ul class="skilldescription">
-                <li>Responsible, motivated, organized, eager to learn new things.</li>
-            </ul>
-        </section>
-        <div class="clear" id="contact"></div>
-        <div class="contactblock">
+    </div>
+    <div class="clear" id="about"></div>
+    <section class="aboutmyself">
+        <h3 class="heading">A few facts about myself</h3>
+        <p>
+            Hello, my name is Iuliia. I have a British shorthair straight cat named Asja,<br> I like frappe, my favorite food is chocolate, my favourite sport is skiing.<br> I am skiing for 20 years. As long as skiing is enjoyable, I'm going to continue
+            to do it.<br> I am interested in front-end web development and having fun learning it.<br> If you're having fun, then everything else will come easy to you.<br>
+        </p>
+    </section>
+    <div class="clear"></div>
+    <div id=imageblock>
+        <img src="frappe.jpg" alt="Frappe" class="image">
+        <img src="skiing.jpg" alt="Skiing" class="image">
+        <img src="britishcat.jpg" alt="British cat" class="image">
+    </div>
+    <div class="clear" id="skills"></div>
+    <section class=skillsblock>
+        <h3 class="skillname">Skills</h3>
+        <ul class="skilldescription">
+            <li>HTML5;</li>
+            <li>CSS3;</li>
+            <li>JavaScript;</li>
+            <li>JQuery;</li>
+            <li>AJAX;</li>
+            <li>Bootstrap.</li>
+        </ul>
+        <h3 class="skillname">Education</h3>
+        <ul class="skilldescription">
+            <li><span>September-October 2016</span><br>SoftServe IT Academy HTML5/ CSS3/ JavaScript Fundamentals course;</li>
+            <li><span>2012 – 2013</span><br>National University «Lviv Polytechnic», Accounting and Audit, Master’s degree;</li>
+            <li><span>2008 – 2012</span><br>National Forestry University of Ukraine, Accounting and Audit, Bachelor’s degree;</li>
+        </ul>
+        <h3 class="skillname">Personal Skills</h3>
+        <ul class="skilldescription">
+            <li>Responsible, motivated, organized, eager to learn new things.</li>
+        </ul>
+    </section>
+    <div class="clear" id="contact"></div>
+    <div class="contactblock">
         <section class="contacttext">
-                <h3 class="heading">Contact me</h3> 
-                <p>Please feel free to reach out to me if you have any questions or comments.<br>Also, you could always just send me a friendly hello.</p>
-                <div class="contactinfo">
-                    <h3>Contact information</h3>
-                    <p>Iuliia Lazurkevych</p>
-                    <p>Ukraine. Lviv</p>
-                    <p><i class="fa fa-envelope-o" aria-hidden="true"></i> lazurkevich@yahoo.com</p>
-                    <p><i class="fa fa-mobile" aria-hidden="true"></i> +380973152359</p>
-                    <div class="socialcontact">
-                        <a href="https://www.facebook.com/julia.lazurkevych" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
-                        <a href="https://ua.linkedin.com/in/iuliia-lazurkevych-285b2812b" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
-                        <a href="https://github.com/julialaz" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-                    </div>
+            <h3 class="heading">Contact me</h3>
+            <p>Please feel free to reach out to me if you have any questions or comments.<br>Also, you could always just send me a friendly hello.</p>
+            <div class="contactinfo">
+                <h3>Contact information</h3>
+                <p>Iuliia Lazurkevych</p>
+                <p>Ukraine. Lviv</p>
+                <p><i class="fa fa-envelope-o" aria-hidden="true"></i> lazurkevich@yahoo.com</p>
+                <p><i class="fa fa-mobile" aria-hidden="true"></i> +380973152359</p>
+                <div class="socialcontact">
+                    <a href="https://www.facebook.com/julia.lazurkevych" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+                    <a href="https://ua.linkedin.com/in/iuliia-lazurkevych-285b2812b" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+                    <a href="https://github.com/julialaz" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                 </div>
+            </div>
         </section>
         <section class="contactform">
             <h3>I always like to know who I'm speaking with.</h3><br>
@@ -111,26 +107,26 @@
                 </ul>
             </form>
         </section>
+    </div>
+    <div class="clear"></div>
+    <div id="map"></div>
+    <footer class="footer">
+        <h3 class="namefooter">Iuliia Lazurkevych</h3>
+        <nav class="navfooter">
+            <a href="#main">main</a>
+            <a href="#about">about</a>
+            <a href="#skills">skills</a>
+            <a href="#contact">contact</a>
+        </nav>
+        <a href="https://github.com/Julialaz/project" target="_blank" id="copyright">&copy; Iullia Lazurkevych 2016</a>
+        <div class="socialfooter">
+            <a href="https://www.facebook.com/julia.lazurkevych" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+            <a href="https://ua.linkedin.com/in/iuliia-lazurkevych-285b2812b" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+            <a href="https://github.com/julialaz" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
         </div>
-        <div class="clear"></div>
-        <div id="map"></div>
-        <footer class="footer">
-            <h3 class="namefooter">Iuliia Lazurkevych</h3>
-            <nav class="navfooter"> 
-                <a href="#main">main</a>
-                <a href="#about">about</a>
-                <a href="#skills">skills</a>
-                <a href="#contact">contact</a>
-            </nav>
-            <a href="https://github.com/Julialaz/project"  target="_blank" id="copyright">&copy; Iullia Lazurkevych 2016</a>
-            <div class="socialfooter">
-                <a href="https://www.facebook.com/julia.lazurkevych" target="_blank"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
-                <a href="https://ua.linkedin.com/in/iuliia-lazurkevych-285b2812b" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
-                <a href="https://github.com/julialaz" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-            </div>
-        </footer>
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="index.js"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwVysCrLlGRvtH34ImGCD7OqZNCKCHLUk&callback=initMap"></script>
-    </body>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="index.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwVysCrLlGRvtH34ImGCD7OqZNCKCHLUk&callback=initMap"></script>
+</body>
 </html>
