--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
@@ -41,9 +41,9 @@
     </section>
     <div class="clear"></div>
     <div id=imageblock>
-        <img src="frappe.jpg" alt="Frappe" class="image">
-        <img src="skiing.jpg" alt="Skiing" class="image">
-        <img src="britishcat.jpg" alt="British cat" class="image">
+        <img src="images/frappe.jpg" alt="Frappe" class="image">
+        <img src="images/skiing.jpg" alt="Skiing" class="image">
+        <img src="images/britishcat.jpg" alt="British cat" class="image">
     </div>
     <div class="clear" id="skills"></div>
     <section class=skillsblock>
